migrate mailinglist application - Replace Spring with JEE CDI bean - Starting migrate integration tests - Replace Spring init method from XML config with Silverpeas Initialization - fix database migration script - migrate database script (fixing version number and module name case)